<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_video"/>

    <Button
        android:id="@+id/btn_start_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_record_audio"/>

    <Button
        android:id="@+id/btn_stop_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_record_audio"/>

    <Button
        android:id="@+id/btn_play_pcm_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_pcm_record_audio"/>

    <Button
        android:id="@+id/btn_play_wav_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_wav_record_audio"/>

    <Button
        android:id="@+id/btn_pause_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause_record_audio"/>
</LinearLayout>